objects/ASI_CRM_Receipt__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Document_Type__c</fullName>
        <label>Document Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_ID__c</fullName>
        <label>Payment ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receipt_Amount__c</fullName>
        <label>Receipt Amount</label>
        <summarizedField>ASI_CRM_Receipt_Line_Item__c.ASI_CRM_Amount__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Receipt_Line_Item__c.ASI_CRM_Receipt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receipt_Number__c</fullName>
        <label>Receipt Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Receipt</label>
    <listViews>
        <fullName>ASI_CRM_SG_Receipts</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Receipt_Date__c</columns>
        <columns>ASI_CRM_Receipt_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Receipt__c.ASI_CRM_SG_Receipt</value>
        </filters>
        <label>SG - Receipts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_G_L_Date__c</columns>
        <columns>ASI_CRM_Payment_ID__c</columns>
        <columns>ASI_CRM_Receipt_Date__c</columns>
        <columns>ASI_CRM_Receipt_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>RCPT-{000000}</displayFormat>
        <label>Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Receipt</fullName>
        <active>true</active>
        <label>SG CRM Receipt</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>